gccida/c2/recog_29
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:39575:10: error: conflicting types for 'recog_29'
__int64  recog_29( rtx x0, rtx insn, int *pnum_clobbers) 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:39111:12: note: previous declaration is here
static int recog_29 PARAMS ((rtx, rtx, int *));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40026:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)v6->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40032:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v9.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40036:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v98; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40044:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v100; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40048:42: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !rtx_equal_p( *( rtx *)( v101 + 8), recog_data_0.operand[1]) ) 
                                         ^~~~~~~~~~~~
                                         recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40067:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v9.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40071:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v11; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40079:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v14; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40083:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !rtx_equal_p( *( rtx *)( v15 + 8), recog_data_0.operand[1]) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40107:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v21.rtwint = ( __int64)v6->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40114:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v21.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40118:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v105; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40126:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v107; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40130:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v108 + 8), recog_data_0.operand[1]) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40162:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v21.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40170:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v24; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40178:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v27; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/insn-recog.c:40182:40: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v28 + 8), recog_data_0.operand[1]) ) 
                                       ^~~~~~~~~~~~
                                       recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_29/src/obj/insn-recog.o] Error 1
